# Copyright 2016 Leon Barrett
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]

name = "mtbl-sys"
version = "0.1.0"
authors = ["Leon Barrett <leon@barrettnexus.com>"]

description = "FFI Bindings to the MTBL C library (https://github.com/farsightsec/mtbl)"
repository = "https://github.com/leon-barrett/mtbl-sys"
homepage = "https://github.com/leon-barrett/mtbl-sys"
readme = "README.md"
keywords = ["bindings", "database", "mtbl", "cdb"]
license = "Apache-2.0"

[dependencies]
libc = "*"

[dev-dependencies]
tempfile = "1.1.1"
