# Copyright (c) 2016 Leon Barrett
#
# Licensed under the Apache License, Version 2.0
# <LICENSE-APACHE or http://www.apache.org/licenses/LICENSE-2.0> or the MIT
# license <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. All files in the project carrying such notice may not be copied,
# modified, or distributed except according to those terms.

[package]

name = "mtbl-sys"
version = "0.1.0"
authors = ["Leon Barrett <leon@barrettnexus.com>"]

description = "FFI Bindings to the MTBL C library (https://github.com/farsightsec/mtbl)"
repository = "https://github.com/leon-barrett/mtbl-sys"
homepage = "https://github.com/leon-barrett/mtbl-sys"
readme = "README.md"
keywords = ["bindings", "database", "mtbl", "cdb"]
license = "MIT/Apache-2.0"

[dependencies]
libc = "*"

[dev-dependencies]
tempfile = "1.1.1"
